# -*- coding: utf-8 -*-

2009-03-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  RubyGems now loads plugins from rubygems_plugin.rb
	  in installed gems.  This can be used to add commands (See
	  Gem::CommandManager) or add install/uninstall hooks (See
	  Gem::Installer and Gem::Uninstaller).

2009-03-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package_task.rb:  Import from Rake's
	  rake/gempackagetask.rb
	* Rakefile:  Switched to RDoc::Task from RDoc 2.4.2.
	* lib/rubygems.rb:  Gem.find_files now returns paths in $LOAD_PATH.
	* lib/rubygems/commands/sources_command.rb:  Allow sources to be added
	  behind proxies.  Bug #24785 by Elia Schito.

2009-03-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/install_command.rb:  Fix typo.  Patch #24446
	  by Luis Parravicini.
	* lib/rubygems/version.rb:  Handle non-String versions by calling
	  #to_s.  Patch #24392 by Stephen Bannasch.

2009-03-22  Daniel Berger <djberg96@gmail.com>

   * lib/rubygems/remote_fetcher.rb: Always escape URI's to deal with spaces
     and such, regardless of platform.
   * lib/rubygesm/validator.rb: Use the test-unit gem if installed.
     Part of the fix for RF #24261
   * lib/rubygems/commands/install_command.rb: Explictly require
     rubygems/uninstaller.rb if the user wants to bail because of failed
     tests.
     Part of the fix for RF #24261

2009-03-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/query_command.rb:  Make `gem unpack` work with
	  more than one gem name, fix warning about installation location.

2009-03-16  James Tucker <jftucker@gmail.com>

	* lib/rubygems.rb: Deprecate ConfigMap[:RUBY_INSTALL_NAME]
	* lib/rubygems/defaults.rb: Gem.default_exec_format to use 
		ConfigMap[:ruby_install_name].
		Fixes Bug #24457
	* util/gem_prelude.rb.template: Fix potential bug in
	  Gem.default_exec_format when ConfigMap[:BASERUBY] is not 'ruby'.

2009-03-14  Luis Lavena  <luislavena@gmail.com>
